--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.21.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.4"
