--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.21.3",
+    "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.4"
   },
