--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.21.3",
     "react-tabs": "^6.0.2",
+    "socket.io-client": "^4.7.4",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.4",
     "uuid": "^9.0.1"
